// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders with children 1`] = `
<DocumentFragment>
  <header
    class="css-1yz7e9k"
  >
    <div
      class="css-1yz7e9k"
    >
      <h1>
        Test Header
      </h1>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header renders with custom styles 1`] = `
<DocumentFragment>
  <header
    class="css-1yz7e9k"
  >
    <div
      class="css-1g5wp3y"
    >
      <h1>
        Test Header with Styles
      </h1>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header renders with empty styles object 1`] = `
<DocumentFragment>
  <header
    class="css-1yz7e9k"
  >
    <div
      class="css-1yz7e9k"
    >
      <h1>
        Test Header with Empty Styles
      </h1>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header renders without styles prop 1`] = `
<DocumentFragment>
  <header
    class="css-1yz7e9k"
  >
    <div
      class="css-1yz7e9k"
    >
      <h1>
        Test Header without Styles
      </h1>
    </div>
  </header>
</DocumentFragment>
`;
